// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Box align 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-end;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: normal;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: first baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: last baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: safe center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: unsafe center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: inherit;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: initial;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: unset;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
  <div
    class="c13"
  />
</div>
`;

exports[`Box alignContent 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: space-between;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: space-around;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: flex-end;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: space-evenly;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: normal;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: first baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: last baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: safe center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: unsafe center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: inherit;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: initial;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-content: unset;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c8"
  />
  <div
    class="c12"
  />
  <div
    class="c13"
  />
  <div
    class="c14"
  />
  <div
    class="c15"
  />
  <div
    class="c16"
  />
</div>
`;

exports[`Box alignSelf 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: flex-end;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: baseline;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
</div>
`;

exports[`Box basis 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 96px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 192px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 384px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 768px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 1152px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 50%;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 33.33%;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 66.66%;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 25%;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 75%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c4"
    />
    <div
      class="c5"
    />
    <div
      class="c6"
    />
  </div>
  <div
    class="c7"
  >
    <div
      class="c8"
    />
  </div>
  <div
    class="c7"
  >
    <div
      class="c9"
    />
    <div
      class="c9"
    />
  </div>
  <div
    class="c7"
  >
    <div
      class="c10"
    />
    <div
      class="c11"
    />
  </div>
  <div
    class="c7"
  >
    <div
      class="c12"
    />
    <div
      class="c13"
    />
  </div>
</div>
`;

exports[`Box css gap 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  column-gap: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  column-gap: 12px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  column-gap: 24px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  column-gap: 48px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  column-gap: 80px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    column-gap: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    column-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    column-gap: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    column-gap: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    row-gap: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <div
    class="c3"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <div
    class="c4"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <div
    class="c5"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <div
    class="c6"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <div
    class="c7"
  >
    <div
      class="c2"
    />
    <div
      class="c2"
    />
  </div>
  <span
    class="c8"
  >
    <span>
      first
    </span>
    <span>
      second
    </span>
  </span>
</div>
`;

exports[`Box direction 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column-reverse;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row-reverse;
}

@media only screen and (max-width: 768px) {
  .c2 {
    flex-direction: column;
    flex-basis: auto;
    justify-content: flex-start;
    align-items: stretch;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
</div>
`;

exports[`Box fill 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c1"
    />
    <div
      class="c3"
    />
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`Box flex 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 1 auto;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 2 0 auto;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 2 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 2 2 auto;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c4"
    />
    <div
      class="c5"
    />
    <div
      class="c6"
    />
    <div
      class="c7"
    />
    <div
      class="c8"
    />
  </div>
</div>
`;

exports[`Box gap 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

@media only screen and (max-width: 768px) {
  .c3 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
  </div>
  <span
    class="c2"
  >
    <span>
      first
    </span>
    <span
      class="c3"
    />
    <span>
      second
    </span>
  </span>
</div>
`;

exports[`Box gridArea 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  grid-area: header;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Box height 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 96px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 192px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 384px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 768px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 1152px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 111px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  max-height: 100%;
  min-height: 192px;
  height: 768px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
</div>
`;

exports[`Box justify 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: flex-start;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: space-between;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: space-around;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: space-evenly;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: flex-end;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
</div>
`;

exports[`Box margin 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 24px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 48px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-end: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 48px;
  margin-right: 48px;
  margin-top: 12px;
  margin-left: 24px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 48px;
  margin-bottom: 48px;
  margin-top: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  margin-bottom: 12px;
  margin-left: 12px;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 24px;
  margin-right: 24px;
  margin-top: 12px;
  margin-bottom: 12px;
  margin-top: 12px;
  margin-bottom: 48px;
  margin-left: 12px;
  margin-right: 24px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    margin: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-top: 6px;
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-inline-end: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    margin-left: 24px;
    margin-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    margin-left: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    margin-top: 24px;
    margin-bottom: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-left: 12px;
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-top: 6px;
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-bottom: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-right: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
  <div
    class="c13"
  />
  <div
    class="c3"
  />
  <div
    class="c14"
  />
  <div
    class="c15"
  />
</div>
`;

exports[`Box pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 24px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 48px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-bottom: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-right: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-inline-start: 12px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-inline-end: 12px;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 12px;
  padding-left: 24px;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 48px;
  padding-bottom: 48px;
  padding-top: 12px;
  padding-right: 24px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 24px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-top: 12px;
  padding-bottom: 48px;
  padding-left: 12px;
  padding-right: 24px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    padding-inline-end: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding-left: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding-bottom: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding-left: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding-bottom: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    padding-right: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
  <div
    class="c3"
  />
  <div
    class="c13"
  />
  <div
    class="c14"
  />
  <div
    class="c15"
  />
</div>
`;

exports[`Box renders border=between and gap=pixel value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 24px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #777777;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EDEDED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 24px;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
  position: relative;
}

.c3:after {
  content: '';
  position: absolute;
  width: 100%;
  top: 5.5px;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c3:after {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c3:after {
    content: '';
    top: 5.5px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Test 1
    </div>
    <div
      class="c3"
    />
    <div
      class="c4"
    >
      Test 2
    </div>
  </div>
</div>
`;

exports[`Box responsive 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c1"
  />
</div>
`;

exports[`Box responsive container medium 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 1280px;
  container-type: inline-size;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    medium
  </div>
</div>
`;

exports[`Box responsive container small 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 300px;
  container-type: inline-size;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    small
  </div>
</div>
`;

exports[`Box row and column gap 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  gap: 96px 30px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    gap: 48px 30px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    height: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
      <div
        class="c2"
      />
    </div>
    <span
      class="c2"
    >
      <span>
        first
      </span>
      <span
        class="c3"
      />
      <span>
        second
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Box theme border size 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border: solid 1px #7D4CDB;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Box width 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 96px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 192px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 384px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 768px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 1152px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 111px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
</div>
`;

exports[`Box width object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Box wrap 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-wrap: wrap;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-wrap: wrap-reverse;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
</div>
`;
